Fixed alignment in display

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    text-align: right;
     width: 100%;
     padding: 5px;
 }
